--- a/style.css
+++ b/style.css
@@ -1,28 +1,27 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:200,300);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400);
 body{
-	font-family: 'Raleway', sans-serif;
-	margin: 0px;
+    font-family: 'Raleway', sans-serif;
+    margin: 0px;
 }
 #indexBody{
-	background: white;
-	font-weight: 300;
-	font-size: 18px;
+    background: white;
+    font-weight: 300;
+    font-size: 18px;
 }
 #aboutBody{
-	background-color: #fffff9;
+    background-color: #fffff9;
 }
 
 
 
 /*dropdown Menu*/
 nav{
-	display: none;
+    display: none;
     position: absolute;
-    padding: 40px 10px 15px 67px;
-    text-align: left;
+    text-align: center;
     margin-top: 0px;
-    padding-top: 75px;
+    padding-top: 25px;
     padding-bottom: 40px;
     color: #424242;
     width: 100%;
@@ -35,20 +34,20 @@ nav{
     z-index: 3;
 }
 nav p{
-	display: inline;
+    display: inline;
     margin-right: 20px;
     padding: 5px;
     font-size: 24px;
     border: 2px solid #424242;
 }
 #hamburgerIcon{
-	position: relative;
-    display: inline;
+    position: relative;
     top: 35px;
-    left: -60px;
+    left: 20px;
+    z-index: 10;
 }
 #hamburgerIcon div{
-	height: 5px;
+    height: 5px;
     width: 30px;
     background-color: #424242;
     border-radius: 1px;
@@ -58,27 +57,27 @@ nav p{
   display: none;
 }
 header{
-	position: relative;
+    position: relative;
     letter-spacing: 1px;
     font-weight: 300;
     font-size: 18px;
-    padding: 40px 10px 15px 125px;
+    text-align: center;
     color: #424242;
     width: 100%;
     border-bottom: 1px solid #424242;
 }
 nav a{
-	text-decoration: none;
+    text-decoration: none;
     margin: 10px 10px 10px 0px;
     color: #424242;
 }
 header h2{
-	margin-top: 0px;
+    margin-top: 0px;
     margin-bottom: 10px;
     letter-spacing: 1px;
     font-weight: 300;
     font-size: 36px;
-    text-align: left;
+    text-align: center;
     padding-bottom: 5px;
     position: relative;
 }
@@ -90,9 +89,10 @@ h1{
     position: relative;
     letter-spacing: 1px;
     font-weight: 300;
-    font-size: 44px;
-    padding: 40px 10px 15px 125px;
-    text-align: left;
+    font-size: 56px;
+    height: 100px;
+    padding-top: 40px;
+    text-align: center;
     margin-top: 0px;
     color: white;
     width: 100%;
@@ -103,14 +103,14 @@ h1{
     z-index: 3;
 }
 #cityAndText{
-	position: relative;
-	text-align: center;
-	font-weight: 300;
-	font-size: 24px;
-	border-bottom: 1px solid #424242;
+    position: relative;
+    text-align: center;
+    font-weight: 300;
+    font-size: 24px;
+    border-bottom: 1px solid #424242;
 }
 #textContainer{
-	text-align: left;
+    text-align: left;
     position: relative;
     display: inline-block;
     font-weight: 300;
@@ -120,7 +120,7 @@ h1{
     top: -25px;
 }
 #cityAndText h2{
-	position: relative;
+    position: relative;
     display: inline-block;
     width: 200px;
     padding-bottom: 0px;
@@ -136,57 +136,57 @@ h1{
     margin-top: 0px;
 }
 .textLink{
-	position: relative;
-	text-align: center;
-	margin: auto;
-	text-decoration: none;
-	color: black;
+    position: relative;
+    text-align: center;
+    margin: auto;
+    text-decoration: none;
+    color: black;
 }
 #lowerMenu{
-	text-align: center;
+    text-align: center;
 }
 #about{
-	padding: 30px 40px 0px 40px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	top: 0px;
-	margin: auto;
+    padding: 30px 40px 0px 40px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0px;
+    margin: auto;
 }
 #webDevelopment{
-	padding: 30px 40px 0px 40px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	top: 0px;
-	margin: auto;
-	
+    padding: 30px 40px 0px 40px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0px;
+    margin: auto;
+    
 }
 #design{
-	padding: 30px 40px 0px 40px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	top: 0px;
-	margin: auto;	
+    padding: 30px 40px 0px 40px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0px;
+    margin: auto;   
 }
 
 #resume{
-	padding: 30px 40px 0px 40px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	top: 0px;
-	margin: auto;
+    padding: 30px 40px 0px 40px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0px;
+    margin: auto;
 }
 
 #contact{
-	padding: 30px 40px 0px 40px;
-	display: inline-block;
-	position: relative;
-	text-align: center;
-	top: 0px;
-	margin: auto;
+    padding: 30px 40px 0px 40px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    top: 0px;
+    margin: auto;
 }
 /*about*/
 #aboutTextBox{
@@ -204,7 +204,7 @@ h1{
     position: relative;
 }
 #aboutTextBox h2{
-	text-align: center;
+    text-align: center;
     margin-left: auto;
     position: relative;
     display: inline-block;
@@ -216,13 +216,13 @@ h1{
     color: #424242;
 }
 #aboutTextBox img{
-	position: relative;
+    position: relative;
     top: 15px;
     padding-left: 15px;
 }
 /*design*/
 #thumbnailContainer{
-	position: relative;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -231,7 +231,7 @@ h1{
 
 }
 #thumbnailContainer img{
-	margin: 40px 20px 30px 20px;
+    margin: 40px 20px 30px 20px;
 }
 /*web development*/
 #webDevBox1{
@@ -252,14 +252,14 @@ h1{
     margin-right: auto;
     text-align: center;
     width: 100%;
-	height: 300px;
-	background-color: #E0F7FA;
+    height: 300px;
+    background-color: #E0F7FA;
 }
 #webDevBox2 img{
-	padding-top: 80px;
+    padding-top: 80px;
 }
 #webDevText1 {
-	font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 24px;
     width: 485px;
     text-align: left;
@@ -279,25 +279,25 @@ h1{
     width: 100%;
 }
 #webDevBox3 img{
-	margin-top: 100px;
+    margin-top: 100px;
 }
 .codeButtons{
-	margin: 25px 15px 15px 15px;
-	font-weight: 400;
-	font-size: 16px;
-	background-color: #03A9F4;
-	padding: 15px 15px 15px 15px;
-	border-radius: 5px;
-	border: solid 0px #c9c9c9;
-	color: white;
-	text-transform: uppercase;
-	text-decoration: none;
-	-webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    margin: 25px 15px 15px 15px;
+    font-weight: 400;
+    font-size: 16px;
+    background-color: #03A9F4;
+    padding: 15px 15px 15px 15px;
+    border-radius: 5px;
+    border: solid 0px #c9c9c9;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
 }
 #wDBoxTextContainer3 p{
-	font-size: 18px;
+    font-size: 18px;
     width: 700px;
     position: relative;
     margin-left: auto;
@@ -308,9 +308,9 @@ h1{
     line-height: 1.4;
 }
 #webDevBox3 h2{
-	font-size: 72px;
-	color: #424242;
-	margin-bottom: 0px;
+    font-size: 72px;
+    color: #424242;
+    margin-bottom: 0px;
 }
 #wDBoxTextContainer3{
     font-size: 24px;
@@ -319,9 +319,9 @@ h1{
     margin-right: auto;
     text-align: center;
     width: 100%;
-	height: 370px;
-	background-color: #E0F7FA;
-	margin-top: 70px;
+    height: 370px;
+    background-color: #E0F7FA;
+    margin-top: 70px;
 }
 #webDevBox4{
     position: relative;
@@ -331,10 +331,10 @@ h1{
     width: 100%;
 }
 #webDevBox4 img{
-	margin-top: 100px;
+    margin-top: 100px;
 }
 #wDBoxTextContainer4{
-	margin-top: 40px;
+    margin-top: 40px;
     font-size: 18px;
     position: relative;
     margin-left: auto;
@@ -348,18 +348,73 @@ h1{
     background-color: #E0F7FA;
 }
 #wDBoxTextContainer4 p{
-	width: 700px;
-	margin-left: auto;
-	margin-right: auto;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 @media screen and (max-width:882px){
-	#cityAndText h2{
-		text-align: center;
-	    width: 450px;
-	    padding-top: 20px;
-	}
-	
+    #cityAndText h2{
+        text-align: center;
+        width: 460px;
+        padding-top: 20px;
+    }
+    
 }
+@media screen and (max-width:560px){
+    h1 {
+        padding-top: 30px;
+        padding-bottom: 0px;
+        font-size: 44px;
+    }
+    #textContainer p {
+        font-weight: 300;
+        font-size: 24px;
+        color: #424242;
+        margin-top: 0px;
+        width: 290px;
+        margin: auto;
+        text-align: center;
+    }
+    #textContainer h2{
+        margin: auto;
+        position: relative;
+        width: 200px;
+    }
+    #textContainer {
+        width: 300px;
+        text-align: center;
+        top: -25px;
+        margin: auto;
+    }
+    #aboutTextBox{
+        width: 300px;
+    }
+    #aboutTextBox h2{
+        width: 300px;
+    }
+    nav p {
+        display: inline;
+        margin-bottom: 20px;
+        padding: 5px;
+        font-size: 24px;
+        border: 2px solid #424242;
+    }
+    #hamburgerIcon {
+        position: relative;
+        top: 35px;
+        left: 40px;
+    }
+    nav {
+        text-align: center;
+        text-align: center;
+        margin-top: 0px;
+        padding-top: 25px;
+        display: inline-block;
+        width: 100%;
+        top: 0px;
+    }
+}
+
 
 
 
