--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav p{
     top: 35px;
     left: 20px;
     z-index: 10;
+    width: 30px;
 }
 #hamburgerIcon div{
     height: 5px;
@@ -190,6 +191,8 @@ h1{
 }
 
 
+
+
 /*about*/
 #aboutTextBox{
     position: relative;
@@ -228,7 +231,26 @@ h1{
 }
 
 
+
+
+
 /*design*/
+#designContainer{
+    margin-top: 100px;
+    position: relative;
+    height: 350px;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#designContainer p{
+    font-weight: 300;
+    font-size: 48px;
+    color: #424242;
+    text-align: center;
+    position: relative;
+}
 #thumbnailContainer{
     position: relative;
     margin-left: auto;
@@ -241,6 +263,9 @@ h1{
 #thumbnailContainer img{
     margin: 40px 20px 30px 20px;
 }
+
+
+
 /*web development*/
 #webDevBox1{
     font-size: 24px;
@@ -360,13 +385,125 @@ h1{
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/*contact*/
+#contactTextBox{
+    margin-top: 80px;
+    position: relative;
+    height: 350px;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: #FAFAFA;
+    border-radius: 20px;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+}
+#contactTextBox2{
+    margin-top: 20px;
+    position: relative;
+    height: 50px;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: #FAFAFA;
+    border-radius: 20px;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+}
+#contactTextBox2 a{
+    position: relative;
+    color: #424242;
+    font-size: 24px;
+    top: 7px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+#contactTextBox p {
+    font-weight: 300;
+    font-size: 20px;
+    color: #424242;
+    position: relative;
+    text-align: center;
+    width: 350px;
+    margin: 5px;
+    top: 0px;
+}
+#contactTextBox h2{
+    display: inline-block;
+    width: 300px;
+    border-bottom: 1px solid #424242;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 72px;
+    color: #424242;
+}
+#contactTextBox button{
+    margin-top: 35px;
+    font-weight: 400;
+    font-size: 16px;
+    background-color: #03A9F4;
+    padding: 15px 15px 15px 15px;
+    border-radius: 5px;
+    border: solid 0px #c9c9c9;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);   
+}
+#contactTextBox button:hover{
+    background-color: #01579B;
+
+}
+#contactTextBox a{
+    text-decoration: none;
+    color: white;
+}
+#colorBox{
+    width: 100%;
+    height: 700px;
+    background-color: #B2DFDB;
+    text-align: center;
+    position: absolute;
+    margin-top: 0px;
+}
+#colorBox img{
+    position: relative;
+    top: 120px;
+    z-index: 10;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+}
+
+
+/*media queries */
 @media screen and (max-width:882px){
     #cityAndText h2{
         text-align: center;
         width: 460px;
         padding-top: 20px;
     }
-    
+    #wDBoxTextContainer3{
+        height: 450px;
+    }
+    #wDBoxTextContainer3 p {
+        width: 550px;
+    }
+    #wDBoxTextContainer4{
+        height: 150px;
+    }
+    #wDBoxTextContainer4 p {
+        width: 550px;
+    }
 }
 @media screen and (max-width:560px){
     h1 {
