--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
     font-family: 'Raleway', sans-serif;
     margin: 0px;
+    height: 100%;
 }
 #indexBody{
     background: white;
@@ -24,7 +25,8 @@ nav{
     padding-top: 25px;
     padding-bottom: 40px;
     color: #424242;
-    width: 100%;
+    width: 200px;
+    height: 100%;
     left: 0px;
     top: 0px;
     -webkit-box-shadow: 0px 1px 15px 0px rgba(0,0,0,0.75);
@@ -34,17 +36,24 @@ nav{
     z-index: 3;
 }
 nav p{
-    display: inline;
-    margin-right: 20px;
+    margin-right: auto;
+    margin-left: auto;
     padding: 5px;
+    width: 20px;
     font-size: 24px;
     border: 2px solid #424242;
+}
+nav a{
+    text-decoration: none;
+    margin: 10px 10px 10px 0px;
+    color: #424242;
+    font-size: 18px;
 }
 #hamburgerIcon{
     position: relative;
     top: 35px;
     left: 20px;
-    z-index: 10;
+    z-index: 2;
     width: 30px;
 }
 #hamburgerIcon div{
@@ -66,11 +75,6 @@ header{
     color: #424242;
     width: 100%;
     border-bottom: 1px solid #424242;
-}
-nav a{
-    text-decoration: none;
-    margin: 10px 10px 10px 0px;
-    color: #424242;
 }
 header h2{
     margin-top: 0px;
@@ -419,8 +423,9 @@ h1{
 #contactTextBox2 a{
     position: relative;
     color: #424242;
-    font-size: 24px;
-    top: 7px;
+    font-size: 20px;
+    top: 11px;
+    text-transform: uppercase;
     padding-left: 7px;
     padding-right: 7px;
 }
@@ -553,7 +558,7 @@ h1{
         text-align: center;
         margin-top: 0px;
         padding-top: 25px;
-        width: 100%;
+/*        width: 100%;*/
         top: 0px;
     }
 }
