--- a/style.css
+++ b/style.css
@@ -248,24 +248,45 @@ h1{
     margin-right: auto;
     text-align: center;
 }
-#designContainer p{
+#largeDesignText{
     font-weight: 300;
     font-size: 48px;
     color: #424242;
     text-align: center;
     position: relative;
+    border-bottom: 1px solid #424242;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
-#thumbnailContainer{
-    position: relative;
+#smallDesignText{
+    font-weight: 300;
+    font-size: 20px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
+    color: #424242;
     text-align: center;
-    margin-top: 20px;
-    width: 600px;
-
+    position: relative;
+    top: 0px;
 }
-#thumbnailContainer img{
-    margin: 40px 20px 30px 20px;
+#designContainer button{
+    margin: 25px 15px 35px 15px;
+    font-weight: 300;
+    font-size: 16px;
+    background-color: #03A9F4;
+    padding: 15px 15px 15px 15px;
+    border-radius: 5px;
+    border: solid 0px #c9c9c9;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
+}
+#designContainer a{
+    color: white;
+    text-decoration: none;
 }
 
 
