--- a/website.css
+++ b/website.css
@@ -1,5 +1,6 @@
 /*GLOBAL STYLES*/
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic);
 body{
 	margin: 0px;
 	text-rendering: optimizeLegibility;
