--- a/website.css
+++ b/website.css
@@ -228,7 +228,9 @@ footer{
 		top: -300px;
 		text-align: center;
 		position: absolute;
-		margin-left: 0px;
+		margin-left: auto;
+		margin-right: auto;
+		left: 0px
 	}
 	.text_and_photo_container{
 		position: relative;
