--- a/website.css
+++ b/website.css
@@ -225,7 +225,7 @@ footer{
 		margin-right: 0px;	
 	}
 	.lander_text{
-		top: -300px;
+		margin-top: 0px;
 		text-align: center;
 		position: absolute;
 		margin-left: auto;
