--- a/website.css
+++ b/website.css
@@ -1,5 +1,5 @@
 /*GLOBAL STYLES*/
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic);
 body{
 	margin: 0px;
@@ -42,7 +42,7 @@ a{
 	color: #D8625D;
 }
 footer{
-	background-color: #1E1E1E;
+	background-color: #1D2022;
 	color: white;
 	letter-spacing: 2px;
 	height: 300px;
@@ -114,13 +114,16 @@ footer{
 .second_lander_section{
 	width: 100%;
 	position: relative;
-	background-color: #D8625D;
+	background-color: #1D2022;
 	color: white;
 	height: 300px;
 	top: -70px;
 }
 #second_lander_paragraph{
-	font-size: 24px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	letter-spacing: 1px;
+	font-size: 20px;
 	width: 550px;
     text-align: center;
     margin-left: auto;
