Resume and css updates

--- a/website.css
+++ b/website.css
@@ -131,7 +131,7 @@ footer{
     margin-top: 0px;
     margin-bottom: 0px;
     position: relative;
-    top: 30%;
+    top: 36%;
 }
 .third_lander_section{
 	text-align: center;
@@ -216,7 +216,7 @@ footer{
 #contactTextBox button{
     margin-top: 35px;
     font-size: 16px;
-    background-color: #F39431;
+    background-color: #3FAFEC;
     padding: 15px 15px 15px 15px;
     border-radius: 5px;
     border: solid 0px #c9c9c9;
