--- a/website.css
+++ b/website.css
@@ -238,12 +238,14 @@ footer{
     padding: 15px 15px 15px 15px;
     border-radius: 5px;
     border: solid 0px #c9c9c9;
-    color: white;
     text-transform: uppercase;
     text-decoration: none;
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);   
+}
+#contactTextBox a{
+	color: white !important;
 }
 
 /*-------------------------------------- END CONTACT --------------------------------------*/
