--- a/website.css
+++ b/website.css
@@ -198,6 +198,9 @@ footer{
     margin-right: 25px;
     margin-top: 25px;
     margin-bottom: 25px;
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
+	-moz-box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
+	box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
 }
 
 /*-------------------------------------- END PORTFOLIO --------------------------------------*/
