Font color change

--- a/website.css
+++ b/website.css
@@ -167,7 +167,7 @@ footer{
 	margin-right: auto;
 	margin-bottom: 80px;
 	font-size: 18px;
-	color: #424040;
+	color: white;
 }
 #closing_landing_statment{
 	width: 300px;
