changing background color of second lander

--- a/website.css
+++ b/website.css
@@ -156,7 +156,7 @@ footer{
     padding-right: 30px;
     padding-left: 30px;
     transform: translateY(-50%);
-    background-color: rgb(53, 202, 202);
+    background-color: white;
 }
 .third_lander_section{
 	text-align: center;
