--- a/website.css
+++ b/website.css
@@ -27,6 +27,13 @@ a{
 	text-decoration: none;
 	color: black;
 }
+.underline_link{
+	text-decoration: underline;
+}
+.underline_link:hover{
+    color: #D8625D;		
+}
+
 #nav_bar{
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
@@ -463,6 +470,9 @@ footer{
 
 /*-------------------------------------- MEDIA QUERIES --------------------------------------*/
 @media screen and (min-device-width: 320px) and (max-width:882px){
+	.larger_project_image{
+		width: 100%;
+	}
 	.preview_image{
 		width: 300px;
     	height: auto;
@@ -517,7 +527,84 @@ footer{
 /*-------------------------------------- END MEDIA QUERIES --------------------------------------*/
 
 
+/*sample ellevest page*/
+.portfolio_inner_text{
+	margin-left: auto;
+	margin-right: auto;
+	width: 760px;
+	text-align: center;
+}
+.portfolio_text_box{
+	width: 350px;
+
+}
+.align_right{
+	text-align: right;
+}
+.align_left{
+	text-align: left;
+}
+.italic_lato{
+	font-style: italic;
+	text-transform: uppercase;
+	font-weight: 600;
+}
+.colored_box_container{
+	width: 350px;
+}
+.gray_ellevest_box {
+    background-color: rgb(43,41,40);
+    width: 120px;
+    height: 70px;
+    display: inline-block;
+    vertical-align: top;
+}
+.small_green_ellevest_box{
+    width: 210px;
+    position: relative;
+    display: inline-block;
+    height: 100px;
+    background-color: #0F9B8F;
+    margin-left: 10px;
+}
+.large_green_ellevest_box{
+	background-color: #0F9B8F;
+    width: 350px;
+    height: 150px;
+}
 
 
+.left_items{
+    display: inline-block;
+    width: 350px;
+    vertical-align: top;
+    margin-left: 15px;
+}
+.right_items{
+	display: inline-block;
+    width: 350px;
+    vertical-align: top;
+    margin-right: 15px;
 
-
+}
+.portfolio_skill_list h2{
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+@media screen and (min-device-width: 320px) and (max-width:760px){
+	.portfolio_inner_text{
+		width: 350px;
+	}
+	.left_items{
+		margin-left: 0px;
+	}
+	.right_items{
+		margin-right: 0px;
+	}
+	.align_right{
+		text-align: left;
+	}
+	.large_green_ellevest_box{
+		display: none;
+	}
+}
