--- a/website.css
+++ b/website.css
@@ -213,6 +213,8 @@ footer{
 /*-------------------------------------- END PORTFOLIO --------------------------------------*/
 
 
+
+
 /*-------------------------------------- INDIVIDUAL PROJECT PAGES --------------------------------------*/
 .larger_project_image{
 	width: 80%;
@@ -237,8 +239,24 @@ footer{
 	text-decoration: underline;
 	font-size: 18px;
 }
+.next_project_link{
+	font-size: 20px;
+    border-right: 2px solid;
+    border-left: 2px solid;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.next_project_link:hover{
+    padding-left: 35px;
+    padding-right: 35px;
+    color: #F39431;
+    -webkit-transition: padding-left .2s, padding-right .2s;
+    transition: padding-left .2s, padding-right .2s;
+}
 
 /*-------------------------------------- END INDIVIDUAL PROJECT PAGES --------------------------------------*/
+
+
 
 /*-------------------------------------- CONTACT --------------------------------------*/
 #contactTextBox{
@@ -468,66 +486,11 @@ footer{
 	margin: 0;
 }
 
-/*-------------------------------------- MEDIA QUERIES --------------------------------------*/
-@media screen and (min-device-width: 320px) and (max-width:882px){
-	.larger_project_image{
-		width: 100%;
-	}
-	.preview_image{
-		width: 300px;
-    	height: auto;
-	}
-	.lander_text{
-		margin-top: 0px;
-		text-align: center;
-		position: absolute;
-		margin-left: auto;
-		margin-right: auto;
-		left: 0px
-	}
-	#lander_greeting1{
-		margin-top: 0px;
-		font-size: 80px !important;
-	}
-	#lander_greeting2{
-		font-size: 20px !important;
-	}
-	.text_and_photo_container{
-		position: relative;
-		top: 200px;
-	}
-	.second_lander_section{
-		top: -30px;
-	}
-	#second_lander_paragraph{
-		width: 360px;
-		padding-left: 5px;
-		padding-top: 15px;
-		padding-bottom: 15px;
-		padding-right: 5px;
-		font-size: 17px;
-	}
-	#third_lander_paragraph{
-		width: 360px;
-	}
-	#project_description_text{
-		width: 370px;
-	}
-	.light_gray_divider_line{
-		width: 320px;
-	}
-	.fun_blog_text_container img {
-		width: 260px;
-    	height: auto;
-
-	}
-}
 
 
-/*-------------------------------------- END MEDIA QUERIES --------------------------------------*/
+/*------------------------------------ ELLEVEST PORTFOLIO PAGE ----------------------------------*/
 
 
-/*sample ellevest page*/
 .portfolio_inner_text{
 	margin-left: auto;
 	margin-right: auto;
@@ -591,6 +554,82 @@ footer{
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+
+
+/*------------------------------------ END ELLEVEST PORTFOLIO PAGE ----------------------------------*/
+
+
+
+
+
+
+/*------------------------------------ LETS PORTFOLIO PAGE ----------------------------------*/
+
+.centered_lets_meet_icons{
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+.centered_lets_meet_icons img{
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+/*------------------------------------ END LETS PORTFOLIO PAGE ----------------------------------*/
+/*-------------------------------------- MEDIA QUERIES --------------------------------------*/
+@media screen and (min-device-width: 320px) and (max-width:882px){
+	.larger_project_image{
+		width: 100%;
+	}
+	.preview_image{
+		width: 300px;
+    	height: auto;
+	}
+	.lander_text{
+		margin-top: 0px;
+		text-align: center;
+		position: absolute;
+		margin-left: auto;
+		margin-right: auto;
+		left: 0px
+	}
+	#lander_greeting1{
+		margin-top: 0px;
+		font-size: 80px !important;
+	}
+	#lander_greeting2{
+		font-size: 20px !important;
+	}
+	.text_and_photo_container{
+		position: relative;
+		top: 200px;
+	}
+	.second_lander_section{
+		top: -30px;
+	}
+	#second_lander_paragraph{
+		width: 360px;
+		padding-left: 5px;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		padding-right: 5px;
+		font-size: 17px;
+	}
+	#third_lander_paragraph{
+		width: 360px;
+	}
+	#project_description_text{
+		width: 370px;
+	}
+	.light_gray_divider_line{
+		width: 320px;
+	}
+	.fun_blog_text_container img {
+		width: 260px;
+    	height: auto;
+
+	}
+}
 @media screen and (min-device-width: 320px) and (max-width:760px){
 	.portfolio_inner_text{
 		width: 350px;
@@ -607,4 +646,10 @@ footer{
 	.large_green_ellevest_box{
 		display: none;
 	}
+	.top_of_container_text{
+		margin-top: 0px;
+	}
 }
+
+
+/*-------------------------------------- END MEDIA QUERIES --------------------------------------*/
