--- a/website.css
+++ b/website.css
@@ -1,6 +1,10 @@
 /*GLOBAL STYLES*/
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic);
+@font-face { 
+	font-family: 'Dharma';
+	src: url('imgs/DharmaGothicE_Bold_R.otf');
+}
 body{
 	margin: 0px;
 }
@@ -17,6 +21,12 @@ h3{
 	font-family: 'Libre Baskerville', serif;
 	font-size: 18px;
 	font-style: italic;
+}
+h4{
+	font-family: 'Dharma';
+	font-size: 36px;
+	margin-bottom: 10px;
+	text-transform: uppercase;
 }
 p{
 	font-family: 'Lato', sans-serif;
@@ -48,6 +58,12 @@ a{
 }
 #nav_bar a:hover{
 	color: #D8625D;
+	transition: color .3s;
+	-webkit-transition:: color .3s;
+
+}
+.white_nav_links{
+	color: white;
 }
 footer{
 	background-color: #1D2022;
@@ -103,6 +119,17 @@ footer{
 	background-color: #ededed;
 	margin-left: auto;
 	margin-right: auto;
+}
+.light_black_divider_line{
+	width: 400px;
+	height: 1px;
+	background-color: black;
+	margin-left: auto;
+	margin-right: auto;
+}
+.drop_cap{
+	font-size: 84px;
+	font-weight: bolder;
 }
 
 /*-------------------------------------- END GLOBAL STYLES --------------------------------------*/
@@ -289,27 +316,136 @@ footer{
 
 /*-------------------------------------- BLOG --------------------------------------*/
 
-.blog_fun_background_container{
+.blog_container{
 	width: 100%;
-    height: 600px;
-    background: url("imgs/kim-crying-pattern.png");
-    position: relative;
-    text-align: center;
+	text-align: center;
 }
-.fun_blog_text_container{
-	width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    position: absolute;
-    transform: translateY(-50%);
-    top: 50%
+.welcome_container{
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
 }
-.fun_blog_text_container img{
-    margin: 0;
-    height: auto;
+#posts{
+    width: 100%;
+    line-height: 0;
+    border-bottom: 1px solid black;
+    letter-spacing: 2px;
+}
+#posts_span{
+    padding-left: 10px;
+    padding-right: 10px;
     background-color: white;
-    padding: 40px;
+}
+.posts_container{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.non_feature_post{
+	width: 49.7%;
+    height: 300px;
+    background: url('imgs/floppy-disk-background.png');
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+    position: relative;
+}
+.feature_post{
+    width: 100%;
+    display: inline-block;
+    height: 350px;
+    position: relative;
+    text-align: left;
+    background-color: rgb(46, 167, 140);
+}
+.feature_blog_post_title{
+    font-family: 'Lato';
+    font-size: 50px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bolder;
+    bottom: 0px;
+    position: absolute;
+    padding-left: 30px;
+    padding-bottom: 20px;
+}
+.non_feature_blog_post_title{
+    font-family: 'Lato';
+    font-size: 30px;
+    color: #2F2F2F;
+    text-transform: uppercase;
+    font-weight: bolder;
+    padding-bottom: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+.feature_blog_post_title:hover{
+	color: #2F2F2F;
+	-webkit-transition: color .8s;
+	transition: color .8s;
+}
+.non_feature_blog_post_title:hover{
+	color: #D8625D;
+	-webkit-transition: color .8s;
+	transition: color .8s;
+}
+.post_filler{
+	width: 49.8%;
+	height: 300px;
+	margin: 0;
+	padding: 0;
+	background: url('imgs/flag.jpg');
+	position: relative;
+	display: inline-block;
+	opacity: 0.6;
+}
+
+.blog_post_container{
+	width: 100%;
+	text-align: center;
+}
+.post_title{
+	padding-bottom: 10px;
+}
+.post_title h1{
+    font-family: 'Dharma';
+    font-style: italic;
+    font-size: 100px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.post_subtitle{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 14px;
+    width: 580px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.post_body{
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+}
+
+.how-1-link-visual{
+    width: 100%;
+    background-color: #FF6843;
+    height: 300px;
+    text-align: center;
+}
+.how-1-link-visual p{
+    font-family: 'Dharma';
+    font-size: 200px;
+    color: white;
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+    margin-top: 0px;
 }
 
 /*-------------------------------------- END BLOG --------------------------------------*/
