--- a/website.css
+++ b/website.css
@@ -56,11 +56,20 @@ a{
 }
 
 #nav_bar{
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
-	letter-spacing: 2px;
-	text-align: center;
-    padding-top: 30px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-align: center;
+    padding-top: 15px;
+    width: 100%;
+    background-color: #fdfdfd;
+    padding-bottom: 15px;
+    position: fixed;
+    z-index: 99;
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 5px 0px rgba(218, 218, 218, 0.75);
+    top: 0;
 }
 #nav_bar a{
 	margin-left: 7px;
@@ -298,9 +307,9 @@ footer{
     -o-transition: padding-left .2s, padding-right .2s;
     transition: padding-left .2s, padding-right .2s;
 }
-#porfolio_container{
+#portfolio_container{
   text-align: center;
-  margin-top: 30px;
+  margin-top: 90px;
 }
 
 /*-------------------------------------- END INDIVIDUAL PROJECT PAGES --------------------------------------*/
@@ -809,12 +818,6 @@ footer{
         margin-left: 5px;
         margin-right: 5px;
     }
-    #project_description_text{
-        width: 300px;
-    }
-    #lander_greeting2_new{
-        width: 300px;
-    }
     #lander_city{
         width: 280px;
         height: auto;
@@ -845,7 +848,25 @@ footer{
         -o-transform: scale(1);
         transform: scale(1);
     }
+    .portfolio_inner_text,
+    .colored_box_container,
+    .portfolio_text_box,
+    .left_items,
+    .right_items,
+    .portfolio_preview_bio,
+    #project_description_text,
+    #lander_greeting2_new {
+        width: 300px;
+    }
+    .small_green_ellevest_box {
+        width: 160px;
+    }
+    .gray_ellevest_box {
+        width: 100px;
+    }
+
 }
+
 /*-------------------------------------- END MEDIA QUERIES --------------------------------------*/
 
 
