--- a/website.css
+++ b/website.css
@@ -4,23 +4,19 @@
 	font-family: 'Dharma';
 	src: url('imgs/DharmaGothicE_Bold_R.otf');
 }
-@font-face{
-    font-family:"Dharma Gothic E";
-    src:url("http://www.myfontfree.com/data/541/d/dharmagothiceexboldi/DharmaGothicE_ExBold_I.otf");
-}
 body{
 	margin: 0px;
     background: #f8f8f8;
 }
 h1{
-    font-family: 'Dharma Gothic E', sans-serif;
+    font-family: 'Dharma', sans-serif;
     font-size: 175px;
     font-style: italic;
     letter-spacing: 10px;
     text-shadow: 2px 2px #03A9F4;
 }
 h2{
-    font-family: 'Dharma Gothic E', sans-serif;
+    font-family: 'Dharma', sans-serif;
     font-size: 35px;
     font-style: italic;
     letter-spacing: 3px;
@@ -47,6 +43,9 @@ a{
 	text-decoration: none;
 	color: black;
 }
+a:hover{
+    cursor: pointer;
+}
 .underline_link{
 	border-bottom: 1px solid black;
     font-weight: bold;
@@ -62,13 +61,11 @@ a{
     text-align: center;
     padding-top: 15px;
     width: 100%;
-    background-color: #fdfdfd;
+    background-color: #f8f8f8;
     padding-bottom: 15px;
     position: fixed;
     z-index: 99;
-    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 1px 5px 0px rgba(218, 218, 218, 0.75);
+    border-bottom: 1px solid #e4e4e4;
     top: 0;
 }
 #nav_bar a{
@@ -471,6 +468,7 @@ footer{
 }
 .wresq_old_screenshots h2{
     color: #f8f8f8;
+    font-size: 45px;
 }
 /*-------------------------------------- END WRESQ --------------------------------------*/
 
@@ -900,4 +898,12 @@ bar chart*/
 }
 .dropoff-rate-bar{
     background-color: lightgreen; 
+}
+
+.slide_div_up{
+    -webkit-transform: translateY(-550px);
+    -moz-transform: translateY(-550px);
+    -ms-transform: translateY(-550px);
+    -o-transform: translateY(-550px);
+    transform: translateY(-550px);
 }
