--- a/website.css
+++ b/website.css
@@ -36,6 +36,7 @@ p{
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
     font-size: 18px;
     letter-spacing: 1.5px;
+    line-height: 24px;
 }
 a{
 	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
